<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <TextView
        android:id="@+id/tv_mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/cyan"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/btn_goto_call"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_mainText"
        app:layout_constraintTop_toBottomOf="@id/tv_mainText"
        android:src="@drawable/baseline_phone_24"
        android:contentDescription="@string/phone_description"
        />
    <TextView
        android:id="@+id/tv_callText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_llamar"
        app:layout_constraintTop_toBottomOf="@id/btn_goto_call"
        app:layout_constraintStart_toStartOf="@id/btn_goto_call"
        app:layout_constraintEnd_toEndOf="@id/btn_goto_call"
        android:textSize="15sp"
        />

    <ImageButton
        android:id="@+id/btn_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_alarm_24"
        app:layout_constraintEnd_toEndOf="@id/tv_mainText"
        app:layout_constraintTop_toBottomOf="@id/tv_mainText"
        android:layout_margin="20dp"
        android:contentDescription="@string/alarm_description"
        />

    <TextView
        android:id="@+id/tv_alarmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_alarma"
        app:layout_constraintTop_toBottomOf="@id/btn_alarm"
        app:layout_constraintStart_toStartOf="@id/btn_alarm"
        app:layout_constraintEnd_toEndOf="@id/btn_alarm"
        android:textSize="15sp"
        />

    <ImageButton
        android:id="@+id/btn_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_public_24"
        app:layout_constraintTop_toBottomOf="@id/tv_callText"
        app:layout_constraintStart_toStartOf="@id/btn_goto_call"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/web_description"
        />

    <TextView
        android:id="@+id/tv_webText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_web"
        app:layout_constraintTop_toBottomOf="@id/btn_web"
        app:layout_constraintStart_toStartOf="@id/btn_web"
        app:layout_constraintEnd_toEndOf="@id/btn_web"
        />

   <ImageButton
        android:id="@+id/btn_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_email_24"
        app:layout_constraintTop_toBottomOf="@id/tv_alarmText"
        app:layout_constraintStart_toStartOf="@id/btn_alarm"
        android:layout_marginTop="20dp"
       android:contentDescription="@string/calendar_description"
        />

    <TextView
        android:id="@+id/tv_mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_mail"
        app:layout_constraintStart_toStartOf="@+id/btn_mail"
        app:layout_constraintEnd_toEndOf="@+id/btn_mail"
        android:text="@string/texto_correo"
        android:textSize="15sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>